--- a/Workspace_Scott/ExploreData.ipynb
+++ b/Workspace_Scott/ExploreData.ipynb
@@ -4617,6 +4617,88 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Series.min of 0          2015-12-21T00:00:00\n",
+       "1          2015-12-21T00:00:00\n",
+       "2          2015-12-21T00:00:00\n",
+       "3          2015-12-26T00:00:00\n",
+       "4          2015-09-15T00:00:00\n",
+       "5          2015-09-15T00:00:00\n",
+       "6          2015-12-17T00:00:00\n",
+       "7          2015-12-17T00:00:00\n",
+       "8          2015-12-22T00:00:00\n",
+       "9          2015-12-22T00:00:00\n",
+       "10         2015-12-22T00:00:00\n",
+       "11         2015-12-22T00:00:00\n",
+       "12         2015-12-22T00:00:00\n",
+       "13         2015-12-15T00:00:00\n",
+       "14         2015-12-27T00:00:00\n",
+       "15         2015-12-27T00:00:00\n",
+       "16         2015-12-27T00:00:00\n",
+       "17         2015-09-16T00:00:00\n",
+       "18         2015-09-16T00:00:00\n",
+       "19         2015-12-22T00:00:00\n",
+       "20         2015-12-22T00:00:00\n",
+       "21         2015-12-18T00:00:00\n",
+       "22         2015-12-18T00:00:00\n",
+       "23         2015-12-18T00:00:00\n",
+       "24         2015-12-22T00:00:00\n",
+       "25         2015-12-22T00:00:00\n",
+       "26         2015-12-22T00:00:00\n",
+       "27         2015-12-22T00:00:00\n",
+       "28         2015-12-22T00:00:00\n",
+       "29         2015-12-22T00:00:00\n",
+       "                  ...         \n",
+       "9389027    2019-05-14T00:00:00\n",
+       "9389028    2019-05-14T00:00:00\n",
+       "9389029    2019-05-14T00:00:00\n",
+       "9389030    2019-05-14T00:00:00\n",
+       "9389031    2019-05-14T00:00:00\n",
+       "9389032    2019-05-14T00:00:00\n",
+       "9389033    2019-05-14T00:00:00\n",
+       "9389034    2019-05-14T00:00:00\n",
+       "9389035    2019-05-14T00:00:00\n",
+       "9389036    2019-05-14T00:00:00\n",
+       "9389037    2019-05-14T00:00:00\n",
+       "9389038    2019-05-14T00:00:00\n",
+       "9389039    2019-05-14T00:00:00\n",
+       "9389040    2019-05-14T00:00:00\n",
+       "9389041    2019-05-14T00:00:00\n",
+       "9389042    2019-05-14T00:00:00\n",
+       "9389043    2019-05-14T00:00:00\n",
+       "9389044    2019-05-14T00:00:00\n",
+       "9389045    2019-05-14T00:00:00\n",
+       "9389046    2019-05-14T00:00:00\n",
+       "9389047    2019-05-14T00:00:00\n",
+       "9389048    2019-05-14T00:00:00\n",
+       "9389049    2019-05-14T00:00:00\n",
+       "9389050    2019-05-14T00:00:00\n",
+       "9389051    2019-05-14T00:00:00\n",
+       "9389052    2019-05-14T00:00:00\n",
+       "9389053    2019-05-14T00:00:00\n",
+       "9389054    2019-05-14T00:00:00\n",
+       "9389055    2019-05-14T00:00:00\n",
+       "9389056    2019-05-14T00:00:00\n",
+       "Name: Issue Date, Length: 9389057, dtype: object>"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#-- Available date range\n",
+    "citations[\"Issue Date\"].min"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
