Ran processing for all districts

--- a/Workspace_Scott/PrepareData.ipynb
+++ b/Workspace_Scott/PrepareData.ipynb
@@ -1199,7 +1199,15 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<- Completed creating database schema\n"
+     ]
+    }
+   ],
    "source": [
     "#- Create Table Schemas\n",
     "Base = declarative_base()\n",
@@ -1257,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -1297,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1351,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1392,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1440,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1495,36 +1503,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "allCitations_df.shape[0]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1541,26 +1519,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2015, 2016]\n"
+      "[2015, 2016, 2017, 2018]\n"
      ]
     }
    ],
    "source": [
     "#- Setup Years\n",
-    "# years = [\n",
-    "#     2015,\n",
-    "#     2016,\n",
-    "#     2017,\n",
-    "#     2018 ]\n",
+    "years = [\n",
+    "    2015,\n",
+    "    2016,\n",
+    "    2017,\n",
+    "    2018 ]\n",
     "\n",
-    "years = [2015, 2016]\n",
+    "#- Testing \n",
+    "# years = [2015, 2016]\n",
     "\n",
     "print(years)"
    ]
@@ -1575,48 +1554,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'name': 'Hollywood', 'id': 54}]\n"
+      "[{'name': 'Western', 'id': 51}, {'name': 'Valley', 'id': 53}, {'name': 'Hollywood', 'id': 54}, {'name': 'Southern', 'id': 55}, {'name': 'Central', 'id': 56}]\n"
      ]
     }
    ],
    "source": [
-    "# agencies = [\n",
-    "#     { \n",
-    "#         \"name\" : \"Western\",\n",
-    "#         \"id\" : 51\n",
-    "#     },\n",
-    "#     {\n",
-    "#         \"name\" : \"Valley\",\n",
-    "#         \"id\" : 53\n",
-    "#     },\n",
-    "#     {\n",
-    "#         \"name\" : \"Hollywood\",\n",
-    "#         \"id\" : 54\n",
-    "#     },\n",
-    "#     {\n",
-    "#         \"name\" : \"Southern\",\n",
-    "#         \"id\" : 55\n",
-    "#     },\n",
-    "#     {\n",
-    "#         \"name\" : \"Central\",\n",
-    "#         \"id\" : 56\n",
-    "#     }\n",
-    "# ]\n",
-    "\n",
     "agencies = [\n",
+    "    { \n",
+    "        \"name\" : \"Western\",\n",
+    "        \"id\" : 51\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\" : \"Valley\",\n",
+    "        \"id\" : 53\n",
+    "    },\n",
     "    {\n",
     "        \"name\" : \"Hollywood\",\n",
     "        \"id\" : 54\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\" : \"Southern\",\n",
+    "        \"id\" : 55\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\" : \"Central\",\n",
+    "        \"id\" : 56\n",
     "    }\n",
-    "\n",
     "]\n",
+    "\n",
+    "\n",
+    "#- Testing\n",
+    "# agencies = [\n",
+    "#     {\n",
+    "#         \"name\" : \"Hollywood\",\n",
+    "#         \"id\" : 54\n",
+    "#     }\n",
+    "\n",
+    "# ]\n",
     "\n",
     "print(agencies)"
    ]
@@ -1631,7 +1612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -1640,6 +1621,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "--> Processing agency: Western\n",
+      "-> Processing year: 2015\n",
+      "-> getAgencySummaryForYear. Agency ID: 51 Year: 2015\n",
+      "-> getAgencyDayOfWeekSummary\n",
+      "-> getAgencyTimeOfDaySummary\n",
+      "-> getAgencyTopMeters\n",
+      "<- Commit changes for year: 2015\n",
+      "-> Processing year: 2016\n",
+      "-> getAgencySummaryForYear. Agency ID: 51 Year: 2016\n",
+      "-> getAgencyDayOfWeekSummary\n",
+      "-> getAgencyTimeOfDaySummary\n",
+      "-> getAgencyTopMeters\n",
+      "<- Commit changes for year: 2016\n",
+      "-> Processing year: 2017\n",
+      "-> getAgencySummaryForYear. Agency ID: 51 Year: 2017\n",
+      "-> getAgencyDayOfWeekSummary\n",
+      "-> getAgencyTimeOfDaySummary\n",
+      "-> getAgencyTopMeters\n",
+      "<- Commit changes for year: 2017\n",
+      "-> Processing year: 2018\n",
+      "-> getAgencySummaryForYear. Agency ID: 51 Year: 2018\n",
+      "-> getAgencyDayOfWeekSummary\n",
+      "-> getAgencyTimeOfDaySummary\n",
+      "-> getAgencyTopMeters\n",
+      "<- Commit changes for year: 2018\n",
+      "--> Processing agency: Valley\n",
+      "-> Processing year: 2015\n",
+      "-> getAgencySummaryForYear. Agency ID: 53 Year: 2015\n",
+      "-> getAgencyDayOfWeekSummary\n",
+      "-> getAgencyTimeOfDaySummary\n",
+      "-> getAgencyTopMeters\n",
+      "<- Commit changes for year: 2015\n",
+      "-> Processing year: 2016\n",
+      "-> getAgencySummaryForYear. Agency ID: 53 Year: 2016\n",
+      "-> getAgencyDayOfWeekSummary\n",
+      "-> getAgencyTimeOfDaySummary\n",
+      "-> getAgencyTopMeters\n",
+      "<- Commit changes for year: 2016\n",
+      "-> Processing year: 2017\n",
+      "-> getAgencySummaryForYear. Agency ID: 53 Year: 2017\n",
+      "-> getAgencyDayOfWeekSummary\n",
+      "-> getAgencyTimeOfDaySummary\n",
+      "-> getAgencyTopMeters\n",
+      "<- Commit changes for year: 2017\n",
+      "-> Processing year: 2018\n",
+      "-> getAgencySummaryForYear. Agency ID: 53 Year: 2018\n",
+      "-> getAgencyDayOfWeekSummary\n",
+      "-> getAgencyTimeOfDaySummary\n",
+      "-> getAgencyTopMeters\n",
+      "<- Commit changes for year: 2018\n",
       "--> Processing agency: Hollywood\n",
       "-> Processing year: 2015\n",
       "-> getAgencySummaryForYear. Agency ID: 54 Year: 2015\n",
@@ -1653,6 +1684,68 @@
       "-> getAgencyTimeOfDaySummary\n",
       "-> getAgencyTopMeters\n",
       "<- Commit changes for year: 2016\n",
+      "-> Processing year: 2017\n",
+      "-> getAgencySummaryForYear. Agency ID: 54 Year: 2017\n",
+      "-> getAgencyDayOfWeekSummary\n",
+      "-> getAgencyTimeOfDaySummary\n",
+      "-> getAgencyTopMeters\n",
+      "<- Commit changes for year: 2017\n",
+      "-> Processing year: 2018\n",
+      "-> getAgencySummaryForYear. Agency ID: 54 Year: 2018\n",
+      "-> getAgencyDayOfWeekSummary\n",
+      "-> getAgencyTimeOfDaySummary\n",
+      "-> getAgencyTopMeters\n",
+      "<- Commit changes for year: 2018\n",
+      "--> Processing agency: Southern\n",
+      "-> Processing year: 2015\n",
+      "-> getAgencySummaryForYear. Agency ID: 55 Year: 2015\n",
+      "-> getAgencyDayOfWeekSummary\n",
+      "-> getAgencyTimeOfDaySummary\n",
+      "-> getAgencyTopMeters\n",
+      "<- Commit changes for year: 2015\n",
+      "-> Processing year: 2016\n",
+      "-> getAgencySummaryForYear. Agency ID: 55 Year: 2016\n",
+      "-> getAgencyDayOfWeekSummary\n",
+      "-> getAgencyTimeOfDaySummary\n",
+      "-> getAgencyTopMeters\n",
+      "<- Commit changes for year: 2016\n",
+      "-> Processing year: 2017\n",
+      "-> getAgencySummaryForYear. Agency ID: 55 Year: 2017\n",
+      "-> getAgencyDayOfWeekSummary\n",
+      "-> getAgencyTimeOfDaySummary\n",
+      "-> getAgencyTopMeters\n",
+      "<- Commit changes for year: 2017\n",
+      "-> Processing year: 2018\n",
+      "-> getAgencySummaryForYear. Agency ID: 55 Year: 2018\n",
+      "-> getAgencyDayOfWeekSummary\n",
+      "-> getAgencyTimeOfDaySummary\n",
+      "-> getAgencyTopMeters\n",
+      "<- Commit changes for year: 2018\n",
+      "--> Processing agency: Central\n",
+      "-> Processing year: 2015\n",
+      "-> getAgencySummaryForYear. Agency ID: 56 Year: 2015\n",
+      "-> getAgencyDayOfWeekSummary\n",
+      "-> getAgencyTimeOfDaySummary\n",
+      "-> getAgencyTopMeters\n",
+      "<- Commit changes for year: 2015\n",
+      "-> Processing year: 2016\n",
+      "-> getAgencySummaryForYear. Agency ID: 56 Year: 2016\n",
+      "-> getAgencyDayOfWeekSummary\n",
+      "-> getAgencyTimeOfDaySummary\n",
+      "-> getAgencyTopMeters\n",
+      "<- Commit changes for year: 2016\n",
+      "-> Processing year: 2017\n",
+      "-> getAgencySummaryForYear. Agency ID: 56 Year: 2017\n",
+      "-> getAgencyDayOfWeekSummary\n",
+      "-> getAgencyTimeOfDaySummary\n",
+      "-> getAgencyTopMeters\n",
+      "<- Commit changes for year: 2017\n",
+      "-> Processing year: 2018\n",
+      "-> getAgencySummaryForYear. Agency ID: 56 Year: 2018\n",
+      "-> getAgencyDayOfWeekSummary\n",
+      "-> getAgencyTimeOfDaySummary\n",
+      "-> getAgencyTopMeters\n",
+      "<- Commit changes for year: 2018\n",
       "<-- Completed saving session\n"
      ]
     }
@@ -1686,45 +1779,11 @@
     "          print(f'<- Commit changes for year: {year}')\n",
     "          session.commit()\n",
     "          \n",
-    "\n",
     "    \n",
     "#- Commit Changes\n",
     "session.commit()\n",
     "\n",
-    "print(\"<-- Completed saving session\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "years"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#- Agency ID\n",
-    "# 51: Western\n",
-    "# 53: Valley\n",
-    "# 54: Hollywood\n",
-    "# 55: Southern\n",
-    "# 56: Central\n",
-    "\n",
-    "\n",
-    "\n",
-    "agencyID = 56\n",
-    "\n",
-    "\n",
-    "test_df = meterCitations_df.loc[(meterCitations_df[\"Agency\"] == agencyID), :]\n",
-    "\n",
-    "print(test_df.shape)\n",
-    "test_df.head()"
+    "print(\"<---- Completed saving session\")"
    ]
   },
   {
@@ -1768,194 +1827,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Test filter by year\n",
-    "yearFilter = 2018\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import datetime as dt\n",
-    "\n",
-    "test_df['DateColumn'] = pd.to_datetime(test_df['Issue Date'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filterDate_df = test_df[test_df['DateColumn'].dt.year == yearFilter]\n",
-    "\n",
-    "filterDate_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filterDate_df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#-- Day of week\n",
-    "# 0 - Monday\n",
-    "# 1- tuesday\n",
-    "# 2- Wednesday\n",
-    "# 3- Thursday\n",
-    "# 4- Friday\n",
-    "# 5- Saturday\n",
-    "# 6- Sunday\n",
-    "#\n",
-    "dayOfWeekFilter_df = test_df[test_df['DateColumn'].dt.dayofweek == 0]\n",
-    "\n",
-    "print(dayOfWeekFilter_df.shape)\n",
-    "dayOfWeekFilter_df.head(20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "#-- Time of day\n",
-    "timeFilter_df = test_df[(test_df['Issue time'] >= 1200) & (test_df['Issue time'] < 1300 ) ]\n",
-    "\n",
-    "print(timeFilter_df.shape)\n",
-    "timeFilter_df.head(20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_df['Issue time'].dtype"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#-- Top Meters\n",
-    "# Group by Meter Id and sort by most \n",
-    "\n",
-    "meters_dfGroupBy = test_df.groupby('Meter Id').count()\n",
-    "\n",
-    "\n",
-    "\n",
-    "# print(type(meters_dfGroupBy))\n",
-    "\n",
-    "\n",
-    "\n",
-    "# meters_dfGroupBy\n",
-    "\n",
-    "\n",
-    "testSort_df = meters_dfGroupBy.sort_values('Ticket number', ascending=0)\n",
-    "\n",
-    "testSort_df.head(100)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "testSort_df = meters_dfGroupBy.sort_values('Ticket number', ascending=0)\n",
-    "\n",
-    "\n",
-    "    \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "individual_df =  test_df.loc[(test_df['Meter Id'] == 'GA22'), :]\n",
-    "\n",
-    "individual_df.iloc[0]['Location']\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# theCounter = 0\n",
-    "\n",
-    "# meterCitations_df.loc[(meterCitations_df[\"Agency\"] == agencyID), :]\n",
-    "# for row in testSort_df.head().itertuples():\n",
-    "    \n",
-    "#     print(f'ID: {row.Index}')\n",
-    "#     print(f'count: {row[1]}')\n",
-    "    \n",
-    "#     theCounter = theCounter + 1\n",
-    "    \n",
-    "#     if (theCounter == 3):\n",
-    "#         break\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "meterCitations_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# test_df = meterCitations_df.loc[(meterCitations_df['Meter Id'] == '37'), :]\n",
-    "\n",
-    "meterID = '37'\n",
-    "\n",
-    "test2_df = meterCitations_df.loc[(meterCitations_df['Meter Id'] == meterID), :]\n",
-    "\n",
-    "test2_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_df.shape"
-   ]
   },
   {
    "cell_type": "code",
